Current version of all scripts, plus one to drive PySpark model training